Falta validar campos y ver si esta bien el intent

--- a/FitTrack/app/src/main/res/layout/activity_registro.xml
+++ b/FitTrack/app/src/main/res/layout/activity_registro.xml
@@ -54,7 +54,7 @@
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:hint="@string/password"
-        android:inputType="text"
+        android:inputType="numberPassword"
         android:text=""
         android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/textViewIngresarNombreRegistro"
@@ -70,7 +70,7 @@
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:hint="@string/nombre"
-        android:inputType="text"
+        android:inputType="textPersonName"
         android:text=""
         android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/textViewIngresarApellidoRegistro"
@@ -86,7 +86,7 @@
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:hint="@string/apellido"
-        android:inputType="text"
+        android:inputType="textPersonName"
         android:text=""
         android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/textViewIngresarEmailRegistro"
@@ -103,7 +103,7 @@
         android:layout_height="48dp"
         android:autofillHints="text"
         android:hint="@string/email"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:text=""
         android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/textViewIngresarFechaNacimientoRegistro"
@@ -119,7 +119,7 @@
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:hint="@string/fechaNacimiento"
-        android:inputType="text"
+        android:inputType="date"
         android:text=""
         android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/spinner"
