--- a/FitTrack/app/src/main/res/layout/activity_main_login.xml
+++ b/FitTrack/app/src/main/res/layout/activity_main_login.xml
@@ -5,105 +5,116 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondologin"
     tools:context=".MainActivityLogin">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@+id/textViewTitulo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewTitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tituloLogin"
-        app:layout_constraintBottom_toTopOf="@+id/textViewUser"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <TextView
-        android:id="@+id/textViewUser"
-        android:layout_width="76dp"
-        android:layout_height="19dp"
-        android:text="@string/usuario"
-        app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
-        app:layout_constraintEnd_toStartOf="@+id/textViewIngresarUsuario"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />
-
-    <TextView
-        android:id="@+id/textViewPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/password"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox_RememberMe"
-        app:layout_constraintEnd_toStartOf="@+id/textViewIngresarPassword"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUser" />
-
-    <CheckBox
-        android:id="@+id/checkBox_RememberMe"
-        android:layout_width="105dp"
-        android:layout_height="49dp"
-        android:text="@string/recordar"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />
-
-    <TextView
-        android:id="@+id/textViewIngresarUsuario"
-        android:layout_width="258dp"
-        android:layout_height="24dp"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textViewUser"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />
-
-    <TextView
-        android:id="@+id/textViewIngresarPassword"
-        android:layout_width="257dp"
-        android:layout_height="24dp"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/checkBox_RememberMe"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
-        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarUsuario" />
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/botonLogin"
+    <androidx.gridlayout.widget.GridLayout
+        android:layout_width="340dp"
+        android:layout_height="635dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_RememberMe" />
-
-    <Button
-        android:id="@+id/buttonRegister"
-        android:layout_width="133dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="65dp"
-        android:text="@string/botonDarseAlta"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/buttonLogin"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_RememberMe" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textViewTitulo"
+            android:layout_width="333dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/adlam_display"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/tituloLogin"
+            android:textColor="@color/white"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_row="0" />
+
+        <TextView
+            android:id="@+id/textViewUser"
+            android:layout_width="250dp"
+            android:layout_height="51dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="40dp"
+            android:text="@string/usuario"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+        <EditText
+            android:id="@+id/textViewIngresarUsuario"
+            android:layout_width="255dp"
+            android:layout_height="56dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_column="0"
+            app:layout_row="2" />
+
+        <TextView
+            android:id="@+id/textViewPassword"
+            android:layout_width="250dp"
+            android:layout_height="56dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/password"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_row="3" />
+
+        <EditText
+            android:id="@+id/textViewIngresarPassword"
+            android:layout_width="255dp"
+            android:layout_height="56dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_column="0"
+            app:layout_row="4" />
+
+        <CheckBox
+            android:id="@+id/checkBox_RememberMe"
+            android:layout_width="105dp"
+            android:layout_height="49dp"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/recordar"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_row="5" />
+
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="100dp"
+            android:text="@string/botonLogin"
+            app:layout_column="0"
+            app:layout_row="6" />
+
+        <Button
+            android:id="@+id/buttonRegister"
+            android:layout_width="133dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="190dp"
+            android:layout_marginTop="100dp"
+            android:text="@string/botonDarseAlta"
+            app:layout_column="0"
+            app:layout_row="6" />
+    </androidx.gridlayout.widget.GridLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
