--- a/FitTrack/app/src/main/res/layout/activity_main_workouts_info.xml
+++ b/FitTrack/app/src/main/res/layout/activity_main_workouts_info.xml
@@ -10,128 +10,133 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-42dp"
-        tools:layout_editor_absoluteY="78dp">
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tituloWorkouts"
-            tools:layout_editor_absoluteX="175dp"
-            tools:layout_editor_absoluteY="131dp" />
+            app:layout_constraintBottom_toTopOf="@+id/imageYt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="119dp"
             android:layout_height="46dp"
             android:text="Volver"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="628dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button4"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageYt" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tituloEntrenador"
-            tools:layout_editor_absoluteX="146dp"
-            tools:layout_editor_absoluteY="628dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/button5"
+            app:layout_constraintTop_toBottomOf="@+id/imageYt" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/botonReproducir"
-            tools:layout_editor_absoluteX="277dp"
-            tools:layout_editor_absoluteY="626dp" />
-
-        <TextView
-            android:id="@+id/workoutName"
-            android:layout_width="88dp"
-            android:layout_height="24dp"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="236dp" />
-
-        <TextView
-            android:id="@+id/totalTIme"
-            android:layout_width="88dp"
-            android:layout_height="24dp"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="307dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/button4"
+            app:layout_constraintTop_toBottomOf="@+id/imageYt" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="88dp"
             android:layout_height="24dp"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="377dp" />
-
-        <TextView
-            android:id="@+id/expectedTime"
-            android:layout_width="88dp"
-            android:layout_height="24dp"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="339dp" />
+            android:text=""
+            app:layout_constraintBottom_toTopOf="@+id/exerciseCompleted"
+            app:layout_constraintEnd_toStartOf="@+id/imageYt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/expectedTime" />
 
         <TextView
             android:id="@+id/exerciseCompleted"
             android:layout_width="88dp"
             android:layout_height="24dp"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="418dp" />
+            android:text=""
+            app:layout_constraintBottom_toTopOf="@+id/button5"
+            app:layout_constraintEnd_toStartOf="@+id/imageYt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/date" />
+
+        <TextView
+            android:id="@+id/workoutName"
+            android:layout_width="88dp"
+            android:layout_height="24dp"
+            android:text=""
+            app:layout_constraintBottom_toTopOf="@+id/workoutNivel"
+            app:layout_constraintEnd_toStartOf="@+id/imageYt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/workoutNivel"
             android:layout_width="88dp"
             android:layout_height="24dp"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="271dp" />
+            android:text=""
+            app:layout_constraintBottom_toTopOf="@+id/totalTIme"
+            app:layout_constraintEnd_toStartOf="@+id/imageYt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/workoutName" />
+
+        <TextView
+            android:id="@+id/totalTIme"
+            android:layout_width="88dp"
+            android:layout_height="24dp"
+            android:text=""
+            app:layout_constraintBottom_toTopOf="@+id/expectedTime"
+            app:layout_constraintEnd_toStartOf="@+id/imageYt"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/workoutNivel" />
+
+        <TextView
+            android:id="@+id/expectedTime"
+            android:layout_width="88dp"
+            android:layout_height="24dp"
+            android:text=""
+            app:layout_constraintBottom_toTopOf="@+id/date"
+            app:layout_constraintEnd_toStartOf="@+id/imageYt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/totalTIme" />
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="101dp"
-            android:layout_height="108dp"
-            app:srcCompat="@drawable/logo"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="16dp" />
+            android:layout_width="409dp"
+            android:layout_height="154dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo" />
 
-        <ImageButton
-            android:id="@+id/imageButton4"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/filter"
-            tools:layout_editor_absoluteX="345dp"
-            tools:layout_editor_absoluteY="10dp" />
-
-        <ImageButton
-            android:id="@+id/imageButton5"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/profile"
-            tools:layout_editor_absoluteX="345dp"
-            tools:layout_editor_absoluteY="81dp" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="343dp"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="127dp">
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ seeker"
-            android:layout_width="331dp"
-            android:layout_height="27dp"
-            android:hint="hint"
-            tools:layout_editor_absoluteX="42dp"
-            tools:layout_editor_absoluteY="163dp" />
+        <ImageView
+            android:id="@+id/imageYt"
+            android:layout_width="287dp"
+            android:layout_height="261dp"
+            app:layout_constraintBottom_toTopOf="@+id/button4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/totalTIme"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:srcCompat="@drawable/ic_launcher_background" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
