--- a/FitTrack/app/src/main/res/layout/activity_registro.xml
+++ b/FitTrack/app/src/main/res/layout/activity_registro.xml
@@ -3,67 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="Logo"
-        app:layout_constraintBottom_toTopOf="@+id/textViewTituloRegistro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:srcCompat="@drawable/logo" />
-
-    <TextView
-        android:id="@+id/textViewTituloRegistro"
-        android:layout_width="150dp"
-        android:layout_height="48dp"
-        android:text="@string/tituloRegistro"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarUsuarioRegistro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="TextSizeCheck" />
+    android:layout_height="match_parent"
+    android:background="@drawable/fondoregister"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="23dp">
 
     <EditText
-        android:id="@+id/textViewIngresarUsuarioRegistro"
+        android:id="@+id/textViewIngresarFechaNacimientoRegistro"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:hint="@string/usuario"
-        android:inputType="text"
+        android:hint="@string/fechaNacimiento"
+        android:inputType="date"
         android:text=""
-        android:textColorHint="#546E7A"
-        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarPasswordRegistro"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistro"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarEmailRegistro"
         tools:ignore="Autofill" />
-
-    <EditText
-        android:id="@+id/textViewIngresarPasswordRegistro"
-        android:layout_width="270dp"
-        android:layout_height="48dp"
-        android:hint="@string/password"
-        android:inputType="numberPassword"
-        android:text=""
-        android:textColorHint="#546E7A"
-        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarNombreRegistro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarUsuarioRegistro"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="Autofill,TextFields,DuplicateSpeakableTextCheck" />
 
     <EditText
         android:id="@+id/textViewIngresarNombreRegistro"
@@ -72,30 +31,63 @@
         android:hint="@string/nombre"
         android:inputType="textPersonName"
         android:text=""
-        android:textColorHint="#546E7A"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textViewIngresarApellidoRegistro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewIngresarPasswordRegistro"
-        app:layout_constraintVertical_bias="0.5"
         tools:ignore="Autofill,DuplicateSpeakableTextCheck" />
 
     <EditText
-        android:id="@+id/textViewIngresarApellidoRegistro"
+        android:id="@+id/textViewIngresarPasswordRegistro"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:hint="@string/apellido"
-        android:inputType="textPersonName"
+        android:hint="@string/password"
+        android:inputType="numberPassword"
         android:text=""
-        android:textColorHint="#546E7A"
-        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarEmailRegistro"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarNombreRegistro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarNombreRegistro"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarUsuarioRegistro"
+        tools:ignore="Autofill,TextFields,DuplicateSpeakableTextCheck" />
+
+    <EditText
+        android:id="@+id/textViewIngresarUsuarioRegistro"
+        android:layout_width="270dp"
+        android:layout_height="48dp"
+        android:hint="@string/usuario"
+        android:inputType="text"
+        android:text=""
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarPasswordRegistro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistro"
+        tools:ignore="Autofill" />
+
+    <TextView
+        android:id="@+id/textViewTituloRegistro"
+        android:layout_width="150dp"
+        android:layout_height="48dp"
+        android:text="@string/tituloRegistro"
+        android:fontFamily="@font/adlam_display"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarUsuarioRegistro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline"
+        tools:ignore="TextSizeCheck" />
 
     <EditText
         android:id="@+id/textViewIngresarEmailRegistro"
@@ -105,66 +97,89 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:text=""
-        android:textColorHint="#546E7A"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textViewIngresarFechaNacimientoRegistro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewIngresarApellidoRegistro"
-        app:layout_constraintVertical_bias="0.5"
         tools:ignore="DuplicateSpeakableTextCheck,TextFields" />
 
     <EditText
-        android:id="@+id/textViewIngresarFechaNacimientoRegistro"
+        android:id="@+id/textViewIngresarApellidoRegistro"
         android:layout_width="270dp"
         android:layout_height="48dp"
-        android:hint="@string/fechaNacimiento"
-        android:inputType="date"
+        android:hint="@string/apellido"
+        android:inputType="textPersonName"
         android:text=""
-        android:textColorHint="#546E7A"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/textViewIngresarEmailRegistro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarEmailRegistro"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="Autofill" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarNombreRegistro"
+        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="358dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
+        android:backgroundTint="#FFFFFFFF"
+        android:foregroundTint="#FFFFFF"
         android:overlapAnchor="false"
-        app:layout_constraintBottom_toTopOf="@+id/buttonVolver"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarFechaNacimientoRegistro"
-        app:layout_constraintVertical_bias="0.5" />
-
-    <Button
-        android:id="@+id/buttonVolver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/botonVolver"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewIngresarFechaNacimientoRegistro" />
 
     <Button
         android:id="@+id/buttonRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#716969"
         android:text="@string/botonRegistro"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonVolver"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.197" />
+
+    <Button
+        android:id="@+id/buttonVolver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#716969"
+        android:text="@string/botonVolver"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.197" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/textViewTituloRegistro"
+        app:layout_constraintGuide_begin="159dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintGuide_begin="758dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
